Twenty Twenty-One: Correct default image alignment in the editor.
By default, the theme centers images on the front end when no alignment is selected. In the editor, however, images were aligned to the left side of the block.

This commit ensures that the alignment in the editor matches the one on the front end.

Props sabernhardt, ashfame, poena, annezazu.
Fixes #53809.
Built from https://develop.svn.wordpress.org/trunk@52142


git-svn-id: http://core.svn.wordpress.org/trunk@51734 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/assets/css/ie-editor.css
+++ b/wp-content/themes/twentytwentyone/assets/css/ie-editor.css
@@ -1458,6 +1458,7 @@ h6 {
 }
 
 /* Center image block by default in the editor */
+.wp-block-image,
 .wp-block-image > div {
 	text-align: center;
 }
