--- a/wp-content/themes/twentytwentyone/assets/css/style-editor.css
+++ b/wp-content/themes/twentytwentyone/assets/css/style-editor.css
@@ -1127,6 +1127,7 @@ h6,
 }
 
 /* Center image block by default in the editor */
+.wp-block-image,
 .wp-block-image > div {
 	text-align: center;
 }
