--- a/wp-content/themes/twentytwentyone/assets/sass/05-blocks/image/_editor.scss
+++ b/wp-content/themes/twentytwentyone/assets/sass/05-blocks/image/_editor.scss
@@ -1,5 +1,6 @@
 /* Center image block by default in the editor */
 
+.wp-block-image,
 .wp-block-image > div {
 	text-align: center;
 }
